--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
     <link rel="stylesheet" href="styles/normalize.css?2.2.06" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.06" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.14" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css?2.2.06" media="screen" />
   </head>
 
@@ -612,7 +612,8 @@
           style="opacity: 0; width: 0px; height: 0px; overflow: hidden; position: absolute; z-index: -1"
           v-model="appDataParkingInputValue" tabindex="-1" />
         <ghost :style="{transform: 'translate(' + appDataGhostX + 'px, ' + appDataGhostY + 'px)'}">
-          <card class="selected" :class="{show: appStateIsDragging, empty: appDataDraggedCard.words.length === 0}">
+          <card class="selected" :style="{rotate: (appDataDraggedCard.rotation * 90) + 'deg'}"
+            :class="{show: appStateIsDragging, empty: appDataDraggedCard.words.length === 0}">
             <words>
               <word v-for="word in appDataDraggedCard.words">{{word.value}}</word>
             </words>
@@ -772,7 +773,7 @@
     <script src="models/CardObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="models/PlayerObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.13" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.14" type="text/javascript"></script>
   </body>
 
 </html>
