--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
     <link rel="stylesheet" href="styles/normalize.css?2.2.06" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.19" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.21" media="screen" />
     <link rel="stylesheet" href="styles/checkbox.min.css?2.2.06" media="screen" />
   </head>
 
@@ -663,7 +663,7 @@
           </hints>
           <cards :class="{disabled: appStateIsModalShowing}">
             <spot v-for="(card, index) in appDataCards" :id="'spot' + index" v-if="!card.isExtra"
-              :class="{wrong: card.failedCheckAlready, empty: card.words.length === 0, selected: card.isSelected}">
+              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected}">
               <rotators>
                 <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateCard(event, card, 1)">
                   <icon class="rotate"></icon>
@@ -773,7 +773,7 @@
     <script src="models/CardObject.min.js?2.2.16" type="text/javascript"></script>
     <script src="models/PlayerObject.min.js?2.2.06" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.20" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.21" type="text/javascript"></script>
   </body>
 
 </html>
