--- a/game/stats.html
+++ b/game/stats.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta content="x-content-type-options=nosniff" />
@@ -9,10 +10,12 @@
     <meta name="mobile-web-app-capable" content="no" />
     <meta name="apple-touch-fullscreen" content="no" />
     <meta name="apple-mobile-web-app-capable" content="no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
-    <meta name="keywords" content="Facets, Facets!, Big Tent Games, Games, Causual game, Puzzle game, Word game, Boardgame, Wil Voss" />
+    <meta name="keywords"
+      content="Facets, Facets!, Big Tent Games, Games, Causual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Statistics on Facets: A Puzzle Game of Words and Wits!." />
 
     <link rel="apple-touch-icon" sizes="120x120" href="../images/icon180.png" />
@@ -32,6 +35,7 @@
         overflow: auto;
         height: 100%;
       }
+
       header {
         flex-direction: column;
         padding: 8px;
@@ -107,9 +111,10 @@
         padding: 0 20px;
         min-width: 60px;
       }
+
       key {
-        font-size: 0.8em;
-        color: hsla(var(--appBackgroundLightestHSL), 1);
+        font-size: 0.7em;
+        color: hsla(var(--traySolvedBackgroundHSL), 1);
       }
 
       value {
@@ -136,8 +141,9 @@
           padding-top: var(--defaultGap);
           max-width: 400px;
         }
+
         key {
-          font-size: 1em;
+          font-size: .6em;
         }
       }
     </style>
@@ -156,7 +162,7 @@
       <icon class="spinner" :class="{show: isFetching}"></icon>
       <stats :class="stat.key.toLowerCase()" v-for="stat in stats">
         <message>{{stat.key}}</message>
-        <stat v-for="kv in stat.value">
+        <stat class="boxed" v-for="kv in stat.value">
           <value>{{ kv.value }}</value>
           <key>{{ kv.key }}</key>
         </stat>
@@ -169,4 +175,5 @@
     <script src="../helpers/vue.min.js" type="text/javascript"></script>
     <script src="../scripts/fetch-stats.js" type="text/javascript"></script>
   </body>
+
 </html>
