--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.29" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.30" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -43,9 +43,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.29" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.29" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.29" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.30" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.30" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.30" media="screen" />
   </head>
 
   <body>
@@ -317,12 +317,12 @@
             <p>Player ID</p>
             <callout>
               <input spellcheck="false" onpointerup="this.select()" inputmode="numeric" type="number" pattern="\d*"
-                v-model="tempID" oninput="if (this.value.length > 8) this.value = this.value.slice(0, 8);"
+                v-model="tempID" oninput="if (this.value.length > 12) this.value = this.value.slice(0, 12);"
                 maxlength="8" />
             </callout>
           </leftright>
-          <small class="alertText" v-if="tempID.toString().length !== 8 || tempID.toString().indexOf('0') === 0">Your ID
-            must be 8 numbers long and not begin with 0.</small>
+          <small class="alertText" v-if="tempID.toString().length < 8 || tempID.toString().indexOf('0') === 0">Your ID
+            must be 8 - 12 numbers long and not begin with 0.</small>
           <small>To avoid connection issues when sharing game stats across different devices, ensure this Player ID
             matches
             on all your browsers. Write this ID down before changing it.</small>
@@ -769,15 +769,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.29" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.29" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.29" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.29" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.29" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.29" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.29" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.30" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.30" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.30" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.30" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.30" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.30" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.30" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.29" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.30" type="text/javascript"></script>
   </body>
 
 </html>
