--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.32" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.33" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -43,9 +43,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.32" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.32" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.32" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.33" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.33" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.33" media="screen" />
   </head>
 
   <body>
@@ -215,11 +215,13 @@
       <modal v-if="appStateShowIntro" class="centered">
         <section>
           <h2>
-            Facets!
+            Facets
             <small style="max-width: unset; font-size: 50%; padding-top: var(--defaultGap)"> A Puzzle Game of Words and
-              Wits! </small>
+              Wits </small>
           </h2>
-          <message>What's your game name?</message>
+          <message>Welcome!</message>
+          <small style="text-align: center; color: hsl(var(--appForegroundHSL))">What's your game
+            name?</small>
           <input autocomplete="off" style="text-align: center" spellcheck="false" maxlength="14" id="nameInput"
             placeholder="_ _ _ _ _ _" v-model="tempName" />
           <checkbox v-if="isNotificationSupported && isSyncSupported && isPWAOnHomeScreen"
@@ -396,7 +398,7 @@
           <leftright style="margin-top: calc(2 * var(--defaultGap))">
             <a class="padded" @click="window.location.reload()">Refresh Facets</a>
           </leftright>
-          <small>App version {{appDataVersion}}, hit this button to insure you have the latest version.</small>
+          <small>App version {{appDataVersion}}, hit this button to ensure you have the latest version.</small>
         </section>
         <controls>
           <button class="secondary" @click="CancelSettings(event)">Cancel</button>
@@ -769,15 +771,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.32" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.32" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.32" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.32" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.32" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.32" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.32" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.33" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.33" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.33" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.33" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.33" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.33" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.33" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.32" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.33" type="text/javascript"></script>
   </body>
 
 </html>
