--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.36" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.37" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -43,9 +43,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.36" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.36" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.36" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.37" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.37" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.37" media="screen" />
   </head>
 
   <body>
@@ -494,7 +494,7 @@
             <p v-if="!Navigator.online">You appear to be offline. 😢</p>
             <button v-if="!Navigator.online" @click="GetDailyGames">Retry</button>
           </message>
-          <gamelinks v-if="!appStateIsGettingDailyGames && !appStateIsGettingUserStats">
+          <gamelinks v-if="!appStateIsGettingDailyGames">
             <gamelink :class="{done: game.solved, quit: game.quit}"
               v-for="(game, index) in getDailyGamesWithWordSetNames">
               <p @click="HandleGameLinkClick(event, game)">
@@ -771,15 +771,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.36" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.36" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.36" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.36" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.36" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.36" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.36" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.37" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.37" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.37" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.37" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.37" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.37" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.37" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.36" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.37" type="text/javascript"></script>
   </body>
 
 </html>
