--- a/open/index.html
+++ b/open/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html itemtype="https://schema.org/VideoGame" lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta content="x-content-type-options=nosniff" />
@@ -10,11 +11,23 @@
     <meta name="mobile-web-app-capable" content="no" />
     <meta name="apple-touch-fullscreen" content="no" />
     <meta name="apple-mobile-web-app-capable" content="no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
-    <meta name="keywords" content="Facets, Facets!, Big Tent Games, Games, Causual game, Puzzle game, Word game, Boardgame, Wil Voss" />
+    <meta name="keywords"
+      content="Facets, Facets!, Big Tent Games, Games, Causual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="Facets!" />
+    <meta property="og:site_name" content="facets.bigtentgames.com" />
+    <meta property="og:author" content="Wil Voss" />
+    <meta property="og:description" content="Facets: A Puzzle Game of Words and Wits!" />
+    <meta property="og:type" content="photo" />
+    <meta property="og:url" content="https://facets.bigtentgames.com/open" />
+    <meta property="og:image" content="https://facets.bigtentgames.com/images/facets_og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="../images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="../images/icon180.png" />
@@ -29,4 +42,5 @@
   </head>
 
   <body></body>
+
 </html>
