--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.41" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.42" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.41" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.41" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.41" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.42" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.42" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.42" media="screen" />
   </head>
 
   <body>
@@ -439,7 +439,7 @@
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
-          <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
+          <p>These AI generated puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
           <small v-if="!userSettingsHideStats" class="statlabel" style="margin-top: var(--defaultGap)"> You've solved
             {{appDataPlayerStats.total}}
             {{appDataPlayerStats.total === 1 ? 'Daily Facet' :  'Daily Facets' }} </small>
@@ -754,15 +754,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.41" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.41" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.41" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.41" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.41" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.41" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.41" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.42" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.42" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.42" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.42" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.42" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.42" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.42" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.41" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.42" type="text/javascript"></script>
   </body>
 
 </html>
