--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.42" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.43" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.42" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.42" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.42" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.43" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.43" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.43" media="screen" />
   </head>
 
   <body>
@@ -253,7 +253,7 @@
 
           <h3>How can you help?</h3>
           <a class="padded" @click="ShareText('https://bigtentgames.com/facets', '')">Share with friends!</a>
-          <a class="padded" href="https://discord.gg/94waSuKW" target="_blank">Join our Discord!</a>
+          <a class="padded" href="https://discord.gg/sJ3vG3RHZd" target="_blank">Join our Discord!</a>
           <a class="padded" href="https://github.com/wilvoss/facets/issues" target="_blank">Submit a bug!</a>
           <h3></h3>
           <version>
@@ -754,15 +754,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.42" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.42" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.42" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.42" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.42" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.42" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.42" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.43" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.43" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.43" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.43" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.43" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.43" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.43" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.42" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.43" type="text/javascript"></script>
   </body>
 
 </html>
