--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.43" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.45" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.43" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.43" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.43" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.45" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.45" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.45" media="screen" />
   </head>
 
   <body>
@@ -118,7 +118,7 @@
           :class="{show: appStateIsGettingLast10Games || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
           style="position: relative" class="spinner"></icon>
         <subtitle>
-          <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="small highlightText"
+          <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="blink "
             @click="ToggleShowMeta(event)">Resume</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
             The Daily Facet
@@ -131,8 +131,10 @@
           </button>
           <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button>
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
-          <button class="small" @click="ShowSettings(event)">Settings</button>
-          <button class="small" @click="ToggleShowInfo(event)">Credits</button>
+          <leftright>
+            <button class="small" @click="ShowSettings(event)">Settings</button>
+            <button class="small" @click="ToggleShowInfo(event)">Credits</button>
+          </leftright>
           <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
             <icon class="bmc small highlightBackground"></icon>
             Buy Me a Coffee!
@@ -754,15 +756,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.43" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.43" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.43" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.43" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.43" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.43" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.43" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.45" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.45" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.45" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.45" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.45" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.45" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.45" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.43" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.45" type="text/javascript"></script>
   </body>
 
 </html>
